<resources>
    <string name="app_name">IntegrationApp</string>
    <string name="BathroomLamp">Bathroom Lamp</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="entranceLamp">Entrance Lamp</string>
    <string name="kitchen">Kitchen Lamp</string>
    <string name="hall">Hall Lamp</string>
    <string name="unlock">Unlock Door</string>
    <string name="management">House Management</string>
    <string name="simulate">Simulate Presence</string>
    <string name="settings">Settings</string>
    <string name="closeWindow">Close Window</string>
    <string name="openWindow">Open Window</string>
    <string name="bell">Bell Log</string>
    <string name="help">Help</string>
    <string name="room1">Room 1:</string>
    <string name="changeRoom">Change Rooms\' Name</string>
    <string name="room2">Room 2:</string>
    <string name="room3">Room 3:</string>
    <string name="room4">Room 4:</string>
    <string name="apply">Apply</string>
    <string name="editRoutine">Edit Simulation Routine</string>
    <string name="applyingLmessage">Applying Light Theme</string>
    <string name="applyingDmessage">Applying Dark Theme</string>
    <string name="applyingDdmessage">Applying Default Theme</string>
    <string name="offline">Offline</string>
</resources>
